--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.50.0",
 		"@typescript-eslint/parser": "^5.50.0",
 		"@unocss/preset-mini": "^0.49.4",
+		"@unocss/preset-web-fonts": "^0.49.4",
 		"@unocss/vite": "^0.49.4",
 		"eslint": "^8.33.0",
 		"eslint-config-prettier": "^8.6.0",
@@ -23,7 +24,13 @@
 		"vite-plugin-solid": "^2.5.0"
 	},
 	"dependencies": {
+		"@modular-forms/solid": "^0.10.0",
+		"@solid-primitives/storage": "^1.3.4",
 		"@unocss/reset": "^0.49.4",
-		"solid-js": "^1.6.10"
+		"clsx": "^1.2.1",
+		"date-fns": "^2.29.3",
+		"nanoid": "^4.0.0",
+		"solid-js": "^1.6.10",
+		"zod": "^3.20.2"
 	}
 }
