--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
+		"@types/lodash": "^4.14.191",
 		"@typescript-eslint/eslint-plugin": "^5.51.0",
 		"@typescript-eslint/parser": "^5.51.0",
 		"@unocss/preset-mini": "^0.49.4",
@@ -29,6 +30,7 @@
 		"@unocss/reset": "^0.49.4",
 		"clsx": "^1.2.1",
 		"date-fns": "^2.29.3",
+		"lodash": "^4.17.21",
 		"nanoid": "^4.0.1",
 		"solid-js": "^1.6.10",
 		"zod": "^3.20.5"
